// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VellumVariableField > ArrayVellumVariable snapshot 1`] = `
"test: list[VellumValue]
"
`;

exports[`VellumVariableField > ArrayVellumVariable with empty list default uses Field(default_factory=list) when false 1`] = `
"test: Optional[list[VellumValue]] = Field(default_factory=list)
"
`;

exports[`VellumVariableField > ArrayVellumVariable with empty list default uses Field(default_factory=list) when true 1`] = `
"test: list[VellumValue] = Field(default_factory=list)
"
`;

exports[`VellumVariableField > ArrayVellumVariable with non-empty list default uses Field(default_factory=lambda: [...]) when false 1`] = `
"test: Optional[list[VellumValue]] = Field(
    default_factory=lambda: [
        "item1",
        "item2",
    ]
)
"
`;

exports[`VellumVariableField > ArrayVellumVariable with non-empty list default uses Field(default_factory=lambda: [...]) when true 1`] = `
"test: list[VellumValue] = Field(
    default_factory=lambda: [
        "item1",
        "item2",
    ]
)
"
`;

exports[`VellumVariableField > AudioVellumVariable snapshot 1`] = `
"test: VellumAudio
"
`;

exports[`VellumVariableField > ChatHistoryVellumVariable snapshot 1`] = `
"test: list[ChatMessage]
"
`;

exports[`VellumVariableField > ChatHistoryVellumVariable with empty list default uses Field(default_factory=list) when false 1`] = `
"test: Optional[list[ChatMessage]] = Field(default_factory=list)
"
`;

exports[`VellumVariableField > ChatHistoryVellumVariable with empty list default uses Field(default_factory=list) when true 1`] = `
"test: list[ChatMessage] = Field(default_factory=list)
"
`;

exports[`VellumVariableField > DocumentVellumVariable snapshot 1`] = `
"test: VellumDocument
"
`;

exports[`VellumVariableField > ErrorVellumVariable snapshot 1`] = `
"test: VellumError
"
`;

exports[`VellumVariableField > FunctionCallVellumVariable snapshot 1`] = `
"test: FunctionCall
"
`;

exports[`VellumVariableField > ImageVellumVariable snapshot 1`] = `
"test: VellumImage
"
`;

exports[`VellumVariableField > JsonVellumVariable snapshot 1`] = `
"test: Any
"
`;

exports[`VellumVariableField > JsonVellumVariable with empty dict default uses Field(default_factory=dict) when false 1`] = `
"test: Optional[Any] = Field(default_factory=dict)
"
`;

exports[`VellumVariableField > JsonVellumVariable with empty dict default uses Field(default_factory=dict) when true 1`] = `
"test: Any = Field(default_factory=dict)
"
`;

exports[`VellumVariableField > JsonVellumVariable with non-empty dict default uses Field(default_factory=lambda: {...}) when false 1`] = `
"test: Optional[Any] = Field(
    default_factory=lambda: {
        "key1": "value1",
        "key2": "value2",
    }
)
"
`;

exports[`VellumVariableField > JsonVellumVariable with non-empty dict default uses Field(default_factory=lambda: {...}) when true 1`] = `
"test: Any = Field(
    default_factory=lambda: {
        "key1": "value1",
        "key2": "value2",
    }
)
"
`;

exports[`VellumVariableField > NullVellumVariable snapshot 1`] = `
"test: None
"
`;

exports[`VellumVariableField > NumberVellumVariable snapshot 1`] = `
"test: Union[float, int]
"
`;

exports[`VellumVariableField > OptionalVellumVariable defaultRequired=false snapshot 1`] = `
"test: Optional[str] = None
"
`;

exports[`VellumVariableField > OptionalVellumVariable defaultRequired=true snapshot 1`] = `
"test: str
"
`;

exports[`VellumVariableField > SearchResultsVellumVariable snapshot 1`] = `
"test: list[SearchResult]
"
`;

exports[`VellumVariableField > StringVellumVariable snapshot 1`] = `
"test: str
"
`;

exports[`VellumVariableField > ThinkingVellumVariable snapshot 1`] = `
"test: StringVellumValue
"
`;

exports[`VellumVariableField > VellumVariable with null default value (required: false) 1`] = `
"test: Optional[str] = None
"
`;

exports[`VellumVariableField > VellumVariable with null default value (required: true) 1`] = `
"test: str
"
`;

exports[`VellumVariableField > VideoVellumVariable snapshot 1`] = `
"test: VellumVideo
"
`;
